--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node app.js"
+    "dev": "node app.js",
+    "use-env" : "node --env-file=.env app.js",
+    "dev-env" : "node --env-file=dev.env app.js",
+    "prod-env" : "node --env-file=prod.env app.js"
   },
   "author": "leo41271",
   "license": "ISC",
